--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 > Connecting to main server... 100%
             </div>
             
-            <button onclick="alert('시스템 관리 페이지로 이동합니다. (구현 예정)')">ENTER MAIN SYSTEM</button>
+            <button onclick="location.href='main.html'">ENTER MAIN SYSTEM</button>
         </div>
     </div>
 
