--- a/main.html
+++ b/main.html
@@ -196,7 +196,7 @@
         
         <div class="menu-item active"><span>📊</span> <span>대시보드</span></div>
         <div class="menu-item"><span>🧬</span> <span>실험체 관리</span></div>
-        <div class="menu-item"><span>🗺️</span> <span>시설 안내도</span></div>
+        <div class="menu-item"><span>🗺️</span> <span>시설 관리</span></div>
         <div class="menu-item"><span>👥</span> <span>조직/인사</span></div>
         <div class="menu-item"><span>🌐</span> <span>대외 홈페이지</span></div>
         
