--- a/main.html
+++ b/main.html
@@ -181,7 +181,7 @@
         
         <a href="main.html" class="menu-item active"><span>📊</span> <span>대시보드</span></a>
         <a href="subjects.html" class="menu-item"><span>🧬</span> <span>실험체 관리</span></a>
-        <a href="#" class="menu-item" onclick="alert('준비 중입니다.')"><span>🏢</span> <span>시설 관리</span></a>
+        <a href="facility.html" class="menu-item"><span>🏢</span> <span>시설 관리</span></a>
         <a href="#" class="menu-item" onclick="alert('준비 중입니다.')"><span>👥</span> <span>조직/인사</span></a>
         <a href="#" class="menu-item" onclick="alert('준비 중입니다.')"><span>🌐</span> <span>대외 홈페이지</span></a>
         
