--- a/staff.html
+++ b/staff.html
@@ -73,7 +73,7 @@
         <a href="public.html" target="_blank" class="menu-item"><span>🌐</span> <span>대외 홈페이지</span></a>
         <div class="profile-box">
             <div class="avatar">K</div>
-            <div class="user-info" onclick="checkMessages()"><h4>KAIRO</h4> <p style="color:var(--danger);">LEVEL 5</p></div>
+            <div class="user-info" onclick="alert('🔒 [ACCESS DENIED]\n\n보안 수신함은 메인 대시보드(Main Console) 터미널에서만\n접속 및 해독이 가능합니다.\n\n메인 화면으로 이동합니다.'); location.href='main.html'"><h4>KAIRO</h4> <p style="color:var(--danger);">LEVEL 5</p></div>
         </div>
     </nav>
     <main class="main-content">
