--- a/public.html
+++ b/public.html
@@ -6,7 +6,7 @@
     <title>EDEN INSTITUTE - Advancing Humanity</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&family=Noto+Sans+KR:wght@300;400;700&family=Playfair+Display:wght@700&display=swap');
-        @import url('https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap'); /* 서명용 폰트 */
+        @import url('https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap');
 
         :root {
             --primary: #002B5B; --secondary: #00A8CC; --bg: #F8F9FA; --text: #333;
@@ -32,6 +32,7 @@
         .logo span { color: var(--secondary); font-family: 'Inter', sans-serif; }
         
         .nav-links { display: flex; gap: 40px; align-items: center; }
+        /* 버튼처럼 동작하도록 커서 설정 */
         .nav-item { text-decoration: none; color: #555; font-weight: 600; font-size: 15px; transition: 0.3s; cursor: pointer; white-space: nowrap; }
         .nav-item:hover { color: var(--primary); }
 
@@ -76,14 +77,14 @@
         }
         .apply-big:hover { background: var(--secondary); color: #fff; transform: scale(1.05); }
 
-        /* 공통 모달 (신청서 & 컨텐츠) */
+        /* 공통 모달 스타일 */
         .modal-overlay, .content-modal {
             display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%;
             background: rgba(0, 0, 0, 0.6); z-index: 2000; justify-content: center; align-items: center;
             opacity: 0; transition: opacity 0.3s;
         }
         
-        /* 신청서 모달 스타일 */
+        /* 신청서 모달 */
         .modal-box {
             background: #fff; width: 90%; max-width: 500px; padding: 40px; border-radius: 12px;
             box-shadow: 0 15px 30px rgba(0,0,0,0.2); position: relative; transform: translateY(20px); transition: transform 0.3s;
@@ -108,7 +109,7 @@
         }
         .btn-submit:hover { background: var(--secondary); }
 
-        /* ▼▼▼ [연구소 소개] 모달 전용 스타일 ▼▼▼ */
+        /* 연구소 소개 모달 전용 */
         .content-modal { background: rgba(255, 255, 255, 0.98); z-index: 3000; overflow-y: auto; display: none; }
         .content-container {
             max-width: 900px; margin: 80px auto; padding: 40px; 
@@ -169,9 +170,9 @@
     <header>
         <div class="logo">EDEN <span>INSTITUTE</span></div>
         <nav class="nav-links">
-            <a onclick="openContent('aboutModal')" class="nav-item">연구소 소개</a>
-            <a onclick="alert('준비 중입니다.')" class="nav-item">핵심 기술</a>
-            <a onclick="alert('준비 중입니다.')" class="nav-item">윤리 경영</a>
+            <a href="javascript:void(0)" onclick="openContent('aboutModal')" class="nav-item">연구소 소개</a>
+            <a href="javascript:void(0)" onclick="alert('준비 중입니다.')" class="nav-item">핵심 기술</a>
+            <a href="javascript:void(0)" onclick="alert('준비 중입니다.')" class="nav-item">윤리 경영</a>
         </nav>
     </header>
 
@@ -201,7 +202,7 @@
     <section class="cta-section">
         <h2>Change Your Life Today</h2>
         <p>당신의 참여가 의학의 미래를 바꿉니다. <br>지금 에덴 연구소의 정기 임상 프로젝트에 지원하세요. 학력, 경력 무관.</p>
-        <a class="apply-big" onclick="openModal()">지금 지원하기</a>
+        <a href="javascript:void(0)" class="apply-big" onclick="openModal()">지금 지원하기</a>
     </section>
 
     <footer>
