--- a/public.html
+++ b/public.html
@@ -32,7 +32,6 @@
         .logo span { color: var(--secondary); font-family: 'Inter', sans-serif; }
         
         .nav-links { display: flex; gap: 40px; align-items: center; }
-        /* 버튼처럼 동작하도록 커서 설정 */
         .nav-item { text-decoration: none; color: #555; font-weight: 600; font-size: 15px; transition: 0.3s; cursor: pointer; white-space: nowrap; }
         .nav-item:hover { color: var(--primary); }
 
@@ -77,17 +76,24 @@
         }
         .apply-big:hover { background: var(--secondary); color: #fff; transform: scale(1.05); }
 
-        /* 공통 모달 스타일 */
+        /* ▼▼▼ [중요] 모달 스타일 수정 (z-index 대폭 상향) ▼▼▼ */
         .modal-overlay, .content-modal {
             display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-            background: rgba(0, 0, 0, 0.6); z-index: 2000; justify-content: center; align-items: center;
+            background: rgba(0, 0, 0, 0.6); z-index: 9999; /* 여기를 높였습니다 */
+            justify-content: center; align-items: center;
             opacity: 0; transition: opacity 0.3s;
         }
         
+        .content-modal {
+            background: rgba(255, 255, 255, 1); /* 불투명 배경 */
+            overflow-y: auto;
+            display: none; /* 기본 숨김 */
+        }
+
         /* 신청서 모달 */
         .modal-box {
             background: #fff; width: 90%; max-width: 500px; padding: 40px; border-radius: 12px;
-            box-shadow: 0 15px 30px rgba(0,0,0,0.2); position: relative; transform: translateY(20px); transition: transform 0.3s;
+            box-shadow: 0 15px 30px rgba(0,0,0,0.5); position: relative; transform: translateY(20px); transition: transform 0.3s;
         }
         .modal-close { position: absolute; top: 20px; right: 20px; font-size: 24px; cursor: pointer; color: #999; }
         .modal-close:hover { color: #333; }
@@ -109,14 +115,13 @@
         }
         .btn-submit:hover { background: var(--secondary); }
 
-        /* 연구소 소개 모달 전용 */
-        .content-modal { background: rgba(255, 255, 255, 0.98); z-index: 3000; overflow-y: auto; display: none; }
+        /* 연구소 소개 모달 내부 */
         .content-container {
             max-width: 900px; margin: 80px auto; padding: 40px; 
             animation: fadeUp 0.5s ease-out;
         }
         .content-close {
-            position: fixed; top: 30px; right: 40px; font-size: 40px; cursor: pointer; color: #333; transition: 0.3s; z-index: 3001;
+            position: fixed; top: 30px; right: 40px; font-size: 40px; cursor: pointer; color: #333; transition: 0.3s; z-index: 10000;
         }
         .content-close:hover { color: var(--primary); transform: rotate(90deg); }
 
@@ -279,12 +284,23 @@
     <script>
         // 컨텐츠 모달 열기/닫기
         function openContent(id) {
-            document.getElementById(id).style.display = 'block';
-            document.body.style.overflow = 'hidden'; 
+            const el = document.getElementById(id);
+            if(el) {
+                el.style.display = 'block';
+                // 투명도 애니메이션
+                setTimeout(() => { el.style.opacity = '1'; }, 10);
+                document.body.style.overflow = 'hidden'; 
+            } else {
+                console.error("ID 못 찾음: " + id);
+            }
         }
         function closeContent(id) {
-            document.getElementById(id).style.display = 'none';
-            document.body.style.overflow = 'auto';
+            const el = document.getElementById(id);
+            if(el) {
+                el.style.opacity = '0';
+                setTimeout(() => { el.style.display = 'none'; }, 300);
+                document.body.style.overflow = 'auto';
+            }
         }
 
         // 지원서 모달
