--- a/about.html
+++ b/about.html
@@ -97,7 +97,7 @@
 
                 <table class="profile-table">
                     <tr><th>NAME</th><td>KAIRO (카이로)</td></tr>
-                    <tr><th>BIRTH</th><td>19XX. 08. 26 (Age Unknown)</td></tr>
+                    <tr><th>BIRTH</th><td>19XX. 08. 26</td></tr>
                     <tr><th>FIELD</th><td>Bio-Engineering / Neuro-Science</td></tr>
                     <tr><th>CAREER</th><td>現 에덴 생명공학 연구소장<br>前 [REDACTED] 국가 수석 연구원</td></tr>
                 </table>
