--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About EDEN - Message from Director</title>
+    <title>EDEN - Message from Director</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&family=Noto+Sans+KR:wght@300;400;700&family=Playfair+Display:wght@700&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap');
@@ -33,7 +33,12 @@
         .director-text { flex: 1; }
         .director-label { color: var(--secondary); font-weight: 700; font-size: 14px; letter-spacing: 2px; margin-bottom: 15px; display: block; }
         .director-name { font-size: 40px; font-family: 'Playfair Display', serif; color: var(--primary); margin-bottom: 30px; font-weight: 700; }
-        .director-bio { font-size: 16px; color: #444; line-height: 1.8; margin-bottom: 40px; word-break: keep-all; }
+        
+        .director-bio { 
+            font-size: 16px; color: #444; line-height: 1.9; margin-bottom: 40px; 
+            text-align: justify; word-break: keep-all; 
+        }
+        
         .sign { font-family: 'Cedarville Cursive', serif; font-size: 28px; color: #555; text-align: right; margin-top: 30px; }
 
         .profile-table { width: 100%; border-top: 2px solid #002B5B; margin-top: 30px; border-collapse: collapse; }
@@ -57,13 +62,13 @@
         <a href="public.html" class="logo">EDEN <span>INSTITUTE</span></a>
         <nav class="nav-links">
             <a href="public.html" class="nav-item">홈으로</a>
-            <a href="about.html" class="nav-item" style="color:var(--primary);">연구소 소개</a>
+            <a href="about.html" class="nav-item" style="color:var(--primary);">인사말</a>
         </nav>
     </header>
 
     <div class="container">
         <div class="page-header">
-            <h1 class="page-title">About EDEN</h1>
+            <h1 class="page-title">Message from Director</h1>
             <p class="page-subtitle">에덴 연구소는 생명의 한계를 규정하지 않습니다.<br>우리는 오직 증명하고, 극복하며, 진화할 뿐입니다.</p>
         </div>
 
@@ -79,7 +84,7 @@
                     <p><strong>"신은 인간을 빚어냈지만, 그 인간을 완성하는 것은 과학입니다."</strong></p>
                     <br>
                     <p>
-                        반갑습니다. 에덴 연구소장 카이로입니다.<br>
+                        반갑습니다. 에덴 연구소장 카이로입니다.
                         인류는 아주 오랜 시간 동안 '죽음'과 '노화'라는 질병에 시달려 왔습니다.
                         우리는 이것을 자연의 섭리라 부르며 체념해왔지만, 에덴의 생각은 다릅니다.
                         질병은 치료되어야 하며, 한계는 극복되어야 합니다.
@@ -90,7 +95,7 @@
                         실질적인 '인류 구원'을 향해 나아가고 있습니다.
                     </p>
                     <p>
-                        여러분의 숭고한 참여가 미래의 역사가 됩니다.<br>
+                        여러분의 숭고한 참여가 미래의 역사가 됩니다.
                         두려워하지 말고, 에덴의 문을 두드리십시오.
                     </p>
                 </div>
