--- a/about.html
+++ b/about.html
@@ -78,11 +78,10 @@
     <header>
         <a href="public.html" class="logo">EDEN <span>INSTITUTE</span></a>
         <nav class="nav-links">
-            <a href="public.html" class="nav-item">홈으로</a>
-            <a href="about.html" class="nav-item" style="color:var(--primary);">인사말</a>
-            <a href="#" class="nav-item" onclick="alert('준비 중입니다.')">연구소 소개</a>
-            <a href="#" class="nav-item" onclick="alert('준비 중입니다.')">윤리 경영</a>
-        </nav>
+    <a href="about.html" class="nav-item">인사말</a>
+    <a href="intro.html" class="nav-item">연구소 소개</a>
+    <a href="#" class="nav-item" onclick="alert('준비 중입니다.')">윤리 경영</a>
+</nav>
     </header>
 
     <div class="container">
