--- a/public.html
+++ b/public.html
@@ -20,6 +20,14 @@
         .nav-item { text-decoration: none; color: #555; font-weight: 600; font-size: 15px; transition: 0.3s; white-space: nowrap; }
         .nav-item:hover { color: var(--primary); }
 
+        /* ▼▼▼ [&] 기호 전용 폰트 스타일 추가 ▼▼▼ */
+        .amp {
+            font-family: 'Inter', sans-serif;
+            font-style: normal;
+            font-weight: 400;
+            color: var(--secondary);
+        }
+
         .hero { height: 75vh; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%); padding: 20px; position: relative; overflow: hidden; }
         .hero::before { content: ''; position: absolute; top: -50%; left: -20%; width: 200%; height: 200%; background: url('data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjAwIiBoZWlnaHQ9IjIwMCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48cGF0aCBkPSJNMTAwIDAgQzUwIDUwIDUwIDE1MCAxMDAgMjAwIFMxNTAgMTUwIDE1MCA1MCAxMDAgMCIgZmlsbD0ibm9uZSIgc3Ryb2tlPSJyZ2JhKDAsIDQzLCA5MSwgMC4wNSkiIHN0cm9rZS13aWR0aD0iMiIvPjwvc3ZnPg=='); opacity: 0.5; animation: rotate 60s linear infinite; }
         .hero h1 { font-family: 'Playfair Display', serif; font-size: 58px; color: var(--primary); margin-bottom: 20px; opacity: 0; animation: fadeUp 1s forwards 0.5s; word-break: keep-all; }
@@ -60,10 +68,11 @@
     <header>
         <a href="public.html" class="logo">EDEN <span>INSTITUTE</span></a>
         <nav class="nav-links">
-    <a href="about.html" class="nav-item">인사말</a>
-    <a href="intro.html" class="nav-item">연구소 소개</a>
-    <a href="#" class="nav-item" onclick="alert('준비 중입니다.')">윤리 경영</a>
-</nav>
+            <a href="public.html" class="nav-item" style="color:var(--primary);">홈으로</a>
+            <a href="about.html" class="nav-item">인사말</a>
+            <a href="intro.html" class="nav-item">연구소 소개</a>
+            <a href="qna.html" class="nav-item">Q<span class="amp">&</span>A</a>
+        </nav>
     </header>
 
     <section class="hero">
