--- a/intro.html
+++ b/intro.html
@@ -19,6 +19,14 @@
         .nav-item { text-decoration: none; color: #555; font-weight: 600; font-size: 15px; transition: 0.3s; cursor: pointer; white-space: nowrap; }
         .nav-item:hover { color: var(--primary); }
 
+        /* ▼▼▼ [&] 기호 전용 폰트 스타일 추가 ▼▼▼ */
+        .amp {
+            font-family: 'Inter', sans-serif;
+            font-style: normal;
+            font-weight: 400;
+            color: var(--secondary);
+        }
+
         /* 메인 비주얼 */
         .page-header {
             background: linear-gradient(rgba(0,43,91,0.8), rgba(0,43,91,0.8)), url('https://source.unsplash.com/1600x900/?laboratory,dna');
@@ -73,7 +81,7 @@
             <a href="public.html" class="nav-item">홈으로</a>
             <a href="about.html" class="nav-item">인사말</a>
             <a href="intro.html" class="nav-item" style="color:var(--primary);">연구소 소개</a>
-            <a href="#" class="nav-item" onclick="alert('준비 중입니다.')">윤리 경영</a>
+            <a href="qna.html" class="nav-item">Q<span class="amp">&</span>A</a>
         </nav>
     </header>
 
