--- a/main.html
+++ b/main.html
@@ -435,7 +435,7 @@
             
             try {
                 // 모델 리스트 조회 시도
-                const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models?key=${key}`);
+                const response = await fetch(`https://generativelanguage.googleapis.com/v1/models?key=${key}`);
                 const data = await response.json();
                 
                 if (data.models) {
