--- a/about.html
+++ b/about.html
@@ -147,7 +147,7 @@
                     <tr><th>BIRTH</th><td>19XX. 08. 26</td></tr>
                     <tr><th>EDUCATION</th><td>Wernher Medical Univ. (M.D. / Ph.D.)</td></tr>
                     <tr><th>FIELD</th><td>Bio-Engineering / Neuro-Science</td></tr>
-                    <tr><th>CAREER</th><td>現 에덴 생명공학 연구소장<br>前 베르너 국립 바이오 센터 국가 수석 연구원</td></tr>
+                    <tr><th>CAREER</th><td>現 에덴 생명공학 연구소장<br>前 베르너 국립 바이오 센터 수석 연구원</td></tr>
                 </table>
                 
                 <div class="sign">Director. Kairo</div>
