--- a/main.html
+++ b/main.html
@@ -234,8 +234,8 @@
         const initialMessages = [
             { type: 'OFFICIAL', sender: '국가 과학 기술 자문회의', title: '[기밀] 4분기 예산 증액 승인', unread: true, date: 'Yesterday', body: '수신: 카이로 소장\n\n귀하의 "인류 진화 프로젝트"에 대한 추가 예산안이 비밀리에 통과되었습니다.\n윤리 위원회의 감사는 예정대로 "서류상으로만" 진행될 것이니\n안심하고 연구에만 매진하십시오.\n\n우리는 귀하의 성과를 기대하고 있습니다.\n\n- 위원장 드림' },
             { type: 'OFFICIAL', sender: '세계 생명 공학 협회', title: '특별 공로상 수상 후보 선정', unread: false, date: '2 days ago', body: '축하드립니다, 카이로 소장님.\n귀하의 혁신적인 연구 성과를 기려 금년도 특별 공로상 유력 후보로 선정되셨습니다.\n(시상식 일정은 추후 대외비로 안내드립니다.)' },
-            { type: 'APPLY', sender: '지원서 접수 시스템', title: '[신규 지원] Elias Weber', unread: true, date: 'Today', body: '[지원자 정보]\n- 성명: Elias Weber\n- 생년월일: 1998-04-12\n- 연락처: +49 151 4920 3819\n\n[특이사항]\n급전 필요함\n\n----------------\n* 1차 적합성 판정 완료. B2 대기실 이송 권장.' },
-            { type: 'APPLY', sender: '지원서 접수 시스템', title: '[신규 지원] Mia Wagner', unread: true, date: 'Today', body: '[지원자 정보]\n- 성명: Mia Wagner\n- 생년월일: 2001-11-23\n- 연락처: +49 170 3829 1023\n\n[특이사항]\n가족 없음, 연고지 불명\n\n----------------\n* 1차 적합성 판정 완료. B2 대기실 이송 권장.' }
+            { type: 'APPLY', sender: '지원서 접수 시스템', title: '[신규 지원] Elias Weber', unread: true, date: 'Today', body: '[지원자 정보]\n- 성명: Elias Weber\n- 생년월일: 1998-04-12\n- 연락처: +49 151 4920 3819\n\n[특이사항]\n급전 필요함\n\n----------------\n* 1차 적합성 판정 완료. 1F 대기실 이송 권장.' },
+            { type: 'APPLY', sender: '지원서 접수 시스템', title: '[신규 지원] Mia Wagner', unread: true, date: 'Today', body: '[지원자 정보]\n- 성명: Mia Wagner\n- 생년월일: 2001-11-23\n- 연락처: +49 170 3829 1023\n\n[특이사항]\n가족 없음, 연고지 불명\n\n----------------\n* 1차 적합성 판정 완료. 1F 대기실 이송 권장.' }
         ];
         const randomEvents = [
             { sender: 'Dr. Vogel (Research)', title: '❗ 402번 개체 쇼크사 보고', body: '소장님, 402번 개체에서 리플리와 유사한 신경 반응이 감지되었으나\n약물 투여 10분 만에 심정지로 사망했습니다.\n\n해부 데이터 서버에 올렸습니다. 확인 부탁드립니다.' },
