--- a/intro.html
+++ b/intro.html
@@ -144,7 +144,7 @@
         </div>
 
         <div class="research-area">
-            <img src="https://source.unsplash.com/800x600/?lab,science" class="r-img" alt="Research Lab">
+            <img src="https://cdn.caveduck.io/cdn-cgi/image/anim=true,dpr=1.5,f=auto,fit=crop,g=top,w=400/charim/d2e276cd-a159-4881-af97-3be07b3e4b1f?v=47a8ad" class="r-img" alt="Research Lab">
             <div class="r-content">
                 <span class="section-label">RESEARCH FIELDS</span>
                 <h2 class="vision-title" style="font-size: 28px; margin-bottom: 20px;">주요 연구 분야</h2>
